--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 
 
-<header>
-<h1 style= "text-align: center;">Title</h1>
+<header style= "text-align: center;">
+<h1>Title</h1>
 </header>    
 
 
